[gd_scene load_steps=4 format=3 uid="uid://s2n6kanmawqi"]

[ext_resource type="Script" uid="uid://x7hryi0q3hku" path="res://Scripts/dialogue_options.gd" id="1_s3xy2"]
[ext_resource type="Theme" uid="uid://b1wsbfbdncshm" path="res://Assets/Finale_Ressourcen/Themes/Dialogue_UI.tres" id="2_vdh8g"]
[ext_resource type="FontFile" uid="uid://cwppbtl6b5nrf" path="res://Assets/Finale_Ressourcen/Typography/BoldPixels.otf" id="3_vdh8g"]

[node name="DialogueManager" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s3xy2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 5
layout_mode = 0
offset_left = 1018.0
offset_top = 562.0
offset_right = 1872.0
offset_bottom = 994.0
size_flags_vertical = 4
theme_override_constants/separation = 36

[node name="Answer1" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(240, 120)
layout_mode = 2
theme = ExtResource("2_vdh8g")
theme_override_fonts/font = ExtResource("3_vdh8g")
theme_override_font_sizes/font_size = 48
text = "Answer 1"

[node name="Answer2" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme = ExtResource("2_vdh8g")
theme_override_fonts/font = ExtResource("3_vdh8g")
theme_override_font_sizes/font_size = 48
text = "Answer 2"

[node name="Answer3" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme = ExtResource("2_vdh8g")
theme_override_fonts/font = ExtResource("3_vdh8g")
theme_override_font_sizes/font_size = 48
text = "Answer 3"

[connection signal="pressed" from="VBoxContainer/Answer1" to="." method="_on_answer_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Answer2" to="." method="_on_answer_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Answer3" to="." method="_on_answer_3_pressed"]
